--- a/css/style.css
+++ b/css/style.css
@@ -24,7 +24,6 @@
     font-family: "Open Sans", sans-serif;
     margin: 0;
     padding: 0;
-    min-width: 1660px;
   }
 
   a {
@@ -48,7 +47,7 @@
     box-sizing: border-box;
   }
   
-  .header:after {
+  .header::after {
     content: "";
     position: absolute;
     top: 0;
@@ -63,7 +62,7 @@
   .logo-nav {
     display: flex;
     position: relative;
-    width: 1170px;
+    max-width: 1170px;
     margin: 0 auto;
     align-items: center;
     padding: 28px 0px;
@@ -71,7 +70,7 @@
   }
   
   .logo {
-    width: 180px;
+    max-width: 180px;
   }
   
   .headline {
@@ -228,7 +227,7 @@
     margin-right: auto;
     margin-bottom: 5px;
     margin-left: auto;
-    width: 1170px;
+    max-width: 1170px;
   }
   
   .posts {
@@ -425,10 +424,16 @@
     clip: rect(0 0 0 0);
     overflow: hidden;
   }
+  .search {
+    display: flex;
+  }
+
+  .search-group {
+    width: calc(100% - 45px);
+  }
   
   .field {
-    box-sizing: border-box;
-    width: 222px;
+    width: 100%;
     border: none;
     background-color: #f4f7f6;
     height: 48px;
@@ -446,9 +451,7 @@
   }
   
   .button {
-    position: absolute;
     margin-top: 60px;
-    box-sizing: border-box;
     width: 48px;
     height: 48px;
     border: none;
@@ -479,9 +482,10 @@
   .subscribe-header:after {
     content: "";
     position: absolute;
+    display: block;
     top: 14px;
     bottom: 23px;
-    left: 105px;
+    left: 145px;
     width: 66px;
     height: 3px;
     background-color: #e1d9bd;
@@ -490,7 +494,7 @@
   
   .field-email {
     height: 48px;
-    width: 270px;
+    width: 100%;
     margin-top: 35px;
     border: none;
     background-color: #f4f7f6;
@@ -507,7 +511,7 @@
   
   .button-subscribe {
     margin-top: 17px;
-    width: 270px;
+    width: 100%;
     border: none;
     background-color: #b59f5b;
     height: 49px;
@@ -628,8 +632,130 @@
     margin-left: 4px;
   }
   
+  .handwork {
+    margin: 65px auto 0;
+    max-width: 1200px;
+    padding: 0 15px;
+  }
+  
+  .handwork-title {
+   font-size: 20px;
+    line-height: 1.2;
+    text-transform: uppercase;
+    color: #0f0d0e;
+    text-align: center;
+    margin-bottom: 40px;
+  }
+  
+  .handwork-title::after {
+    content: " ";
+    display: block;
+    width: 65px;
+    height: 3px;
+    background-color: #e1d9bd;
+    margin: 14px auto 0;
+  }
+  
+  .handwork-cards{ 
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    justify-content: space-between;  
+  }
+  
+  .handwork-card{
+    display: flex;
+    flex-direction: column;
+    width: 350px;
+  }
+  
+  .image-container{
+    padding: 0 25px;
+  }
+  
+  .shop-item-image{
+    width:100%;
+  }
+  
+  .info-container{
+  width:100%;
+   padding: 55px 20px 20px;
+    border: solid 3px #d3c59d;
+    margin-top: -35px;
+    z-index: 1;
+    flex-grow: 1;
+  }
+  
+  .card-title{
+    font-weight: 700;
+    font-size: 20px;
+    text-transform: uppercase;
+    margin-bottom: 15px;
+    color: #0f0d0e;
+    }
+  
+  .card-text{
+    font-family: "Open Sans Regular", sans-serif;
+    line-height: 1.5;
+    font-size: 15px;
+   color: #0f0d0e;
+   margin-bottom: 20px;
+  }
+   
+  .item-link {
+    color: #c9b987;
+    text-decoration: none;
+  }
+  
+  .item-link:hover{
+    text-decoration: underline;
+  }
+  
+  .costs-container{
+    display: flex;
+    justify-content: space-between;
+    align-items: end;
+  }
+  
+  .item-costs{
+    display: flex;
+    flex-direction: column;
+    font-family: OpenSans;
+  }
+  
+  .old-cost{
+    text-decoration: line-through;
+    font-weight: 700;
+    font-size: 14px;
+  }
+  
+  .actual-cost{
+    font-weight: 700;
+    font-size: 20px;
+  }
+  
+  .shop-button{
+    color: #fff;
+    background-color: #b59f5b;
+    width: 140px;
+    height: 50px;
+    font-weight: 700;
+    font-size: 14px;
+    text-transform: uppercase;
+    border: none;
+    margin-top: 18px;
+  }
+  
+  .shop-button:hover{
+    background-color: #000000;
+    cursor: pointer;
+  }
+  
+
+
+
   .footer-content {
-    width: 1170px;
+    max-width: 1170px;
     justify-content: center;
     background-color: #f4f7f6;
     margin: 0 auto;
@@ -693,159 +819,6 @@
     color: #999999;
   }
 
-@media (min-width: 641px) and (max-width: 1199px) and (orientation: portrait) {
-  
-/* Heder */
-
-  .header {
-    padding: 45px 0 125px;
-    background-image: url("../images/banner-bg-tablet.jpg");
-  }
-
-  .header-wrapper {
-    padding: 0 35px;
-  }
-
-  .logo {
-    width: 160px;
-}
-
-.menu-button {
-  display: block;
-}
-
-  .header-title {
-    font-size: 40px;
-    line-height: 1.4;
-    min-width: 610px;
-  }
-
-  .menu-list-item {
-    display: none;
-  }
-
-/* Section Trends */
-
-  .cards-trends-container {
-    flex-wrap: wrap;
-  }
-
-  .section-trends {
-    margin-top: 45px;
-  }
-
-  .trends-title {
-    font-size: 18px;
-    margin-bottom: 20px;
-  }
-
-  .card-trend {
-    width: 49.8%;
-    margin-bottom: 0.4%;
-  }
-
-  .more-trend {
-    margin-top: 0;
-    margin-bottom: 9px;
-  }
-
-  .card-trend-title {
-    font-size: 17px;
-    line-height: 1.3;
-  }
-
-/* Main */
-
-  .section {
-    margin-top: 50px;
-  }
-
-  .section-wrapper {
-    padding: 0 35px;
-  }
-
-  .blogs {
-    width: calc(100% - 270px);
-    margin-right: 35px;
-  }
-
-  .card {
-    display: block;
-  }
-
-  .card:not(:first-child) {
-    padding-top: 45px;
-    border-top: 3px solid #eee;
-  }
-
-  .card:not(:last-child) {
-   margin-bottom: 0;
-   padding-bottom: 20px;
-  }
-
-  .card-media {
-    margin-right: 0;
-  }
-
-  .preview-image {
-    width: 100%;
-  }
-
-  .more {
-    margin-top: 15px;
-  }
-
-  .preview-title {
-    font-size: 17px;
-    line-height: 1.3;
-  }
-
-  .card-metadata {
-    margin-bottom: 35px;
-  }
-
-/* Sidebar */
-
-  .posts {
-    padding-bottom: 60px;
-  }
-
-  .search-group {
-    margin-bottom: 60px;
-  }
-  
-
-/* Products */
-
-  .handwork-cards {
-    width: 100%;
-    padding: 30px;
-  }
-
-  .handwork-card {
-    width: calc(50% - 13px);
- }
-
- .handwork-card:not(:last-child) {
-margin-bottom: 35px;
- }
-
-  /* Footer */
-
-  .footer {
-    margin-top: 50px;
-    padding-bottom: 35px;
-  }
-
-  .footer-wrapper {
-    padding: 0 35px;
-  }
-
-  .copyright {
-    margin-top: 50px;
-  }
-}
-
 
 @media  (max-width: 640px) {
   
@@ -853,10 +826,10 @@ margin-bottom: 35px;
     .header {
       background-image: url("../images/banner-mobile.jpg");
       padding: 28px 0 212px;
+      
     }
 
     .logo-nav {
-      flex-direction: column-reverse;
       padding: 0px 14px;
     }
 
@@ -865,8 +838,11 @@ margin-bottom: 35px;
     }
 
     .logo {
-      width: 269px;
+      width: 100%;
+      max-width: 269px;
       margin-top: 174px;
+      margin-left: 31px;
+      margin-right: 31px;
     }
 
     .main-header-nav {
@@ -878,6 +854,10 @@ margin-bottom: 35px;
       height: 23px;
   
       align-self: flex-end;
+    }
+
+    .site-navigation {
+      display: none;
     }
 
     .headline {
@@ -893,31 +873,55 @@ margin-bottom: 35px;
       margin-top: 36px;
     }
 
+    .cards-trends-container {
+      display: block;
+      width: 100%;
+    }
+
+    .section-trends-wrapper {
+      flex-direction: column;
+    }
+
+    .trends-title {
+      font-size: 16px;
+      margin-bottom: 40px;
+    }
+
     .trends-title::after {
       margin-top: 6px;
     }
 
     .trend-card {
-      flex-direction: column;
+  
       padding: 15px 16px;
       width: 100%;
       min-height: 229px;
-      margin-right: 36px;
+      margin-bottom: 3px;
+    }
+
+    .trend-card:not(:last-child) {
+      margin-bottom: 0.5%;
     }
 
     .content-card-trend {
-      padding: 27px 30px 22px 18px;
+      margin-top: 80px;
+      padding: 25px 20px;
+    }
+
+    .card-trend-title {
+      font-size: 16px;
+      line-height: 1.3;
     }
 
     .main-aside {
-      padding: 0 20px 0 14px;
-      margin-top: 46px;
+      margin-top: 45px;
+      display: block;
+      width: 100%;
     }
 
     .posts-item {
-      flex-direction: column;
+      display: block;
       width: 100%;
-
     }
 
     .posts-item::after {
@@ -931,7 +935,7 @@ margin-bottom: 35px;
     }
 
     .posts-item-2 {
-      flex-direction: column;
+      display: block;
       width: 100%;
       margin-top: 17px;
     }
@@ -947,7 +951,7 @@ margin-bottom: 35px;
     }
 
     .posts-item-3 {
-      flex-direction: column;
+      display: block;
       width: 100%;
       margin-top: 34px;
     }
@@ -963,7 +967,7 @@ margin-bottom: 35px;
     }
 
     .posts-item-4 {
-      flex-direction: column;
+      display: block;
       width: 100%;
       margin-top: 34px;
     }
@@ -974,7 +978,6 @@ margin-bottom: 35px;
       width: 100%;
       height: 3px;
       background-color: #eeeeee;
-  
       margin-top: 17px;
     }
 
@@ -983,34 +986,81 @@ margin-bottom: 35px;
     }
 
     .posts-content {
-      width: 100%;
       margin-top: 8px;
     }
 
-    .posts-chapter-list {
-      margin-bottom: 6px;
-    }
-
     .post-header {
-      width: 100%;
+      font-size: 16px;
+      line-height: 1.3;
+      margin-bottom: 25px;
     }
 
     .time-author {
-      margin-top: 10px;
-    }
-
-    .post-header {
-      width: 100%;
-      margin-top: 5px;
-  
-      line-height: 26px;
-      font-size: 17px;
+      margin-bottom: 25px;
     }
 
     .post-description {
-      padding-top: 25px;
-      padding-bottom: 28px;
+      font-size: 14px;
+      line-height: 1.4;
+      margin-top: 3px;
     }
+
+
+    .right-column {
+      margin-top: 45px;
+      display: block;
+      width: 100%;
+      margin-left: 12px;
+      margin-right: 12px;
+    }
+
+    .side-header {
+      font-size: 16px;
+      margin-bottom: 25px;
+    }
+
+    .side-header::after {
+      margin-top: 10px;
+    }
+
+    .side-items {
+      padding-bottom: 60px;
+    }
+
+    .side-search {
+      margin-bottom: 40px;
+    }
+
+    .subscribe {
+      margin-bottom: 40px;
+    }
+
+    .tags {
+      margin-bottom: 40px;
+    }
+
+    .themes-content li {
+      padding: 12px 0 11px;
+    }
+
+    .main-footer {
+      margin-top: 45px;
+      padding-bottom: 45px;
+    }
+
+    .copyright {
+      margin-top: 50px;
+    }
+
+    .handwork-card {
+      width: 100%;
+    }
+  
+    .handwork-card:not(:last-child) {
+      margin-bottom: 25px;
+    }
+    
+
 
 
   }
