--- a/css/style.css
+++ b/css/style.css
@@ -122,7 +122,7 @@
     text-transform: uppercase;
     color: #0f0d0e;
     text-align: center;
-    margin-bottom: 40px;
+    margin-bottom: 22px;
   }
   
   .trends-title::after {
@@ -185,7 +185,7 @@
     border: 3px solid #b59f5b;
     padding: 30px;
     width: 100%;
-    margin-top: 60px;
+    margin-top: 90px;
   }
   
   .card-trend-title {
@@ -633,7 +633,7 @@
   }
   
   .handwork {
-    margin: 65px auto 0;
+    margin: -6px auto 0;
     max-width: 1200px;
     padding: 0 15px;
   }
@@ -644,7 +644,7 @@
     text-transform: uppercase;
     color: #0f0d0e;
     text-align: center;
-    margin-bottom: 40px;
+    margin-bottom: 24px;
   }
   
   .handwork-title::after {
@@ -679,7 +679,7 @@
   
   .info-container{
   width:100%;
-   padding: 55px 20px 20px;
+   padding: 46px 20px 20px 20px;
     border: solid 3px #d3c59d;
     margin-top: -35px;
     z-index: 1;
@@ -690,7 +690,7 @@
     font-weight: 700;
     font-size: 20px;
     text-transform: uppercase;
-    margin-bottom: 15px;
+    margin-bottom: 3px;
     color: #0f0d0e;
     }
   
@@ -732,6 +732,7 @@
   .actual-cost{
     font-weight: 700;
     font-size: 20px;
+    margin-top: 5px;
   }
   
   .shop-button{
