--- a/css/style.css
+++ b/css/style.css
@@ -821,7 +821,7 @@
   }
 
 
-@media  (max-width: 640px) {
+@media  (max-width: 640px) and (orientation:portrait) {
   
   
     .header {
@@ -858,6 +858,10 @@
     }
 
     .site-navigation {
+      display: none;
+    }
+
+    .site-navigation-item {
       display: none;
     }
 
@@ -1068,9 +1072,239 @@
     .handwork-card:not(:last-child) {
       margin-bottom: 25px;
     }
+    }
+
+    @media (min-width: 641px) and (max-width: 1199px) and (orientation: portrait) {
+
+      .header {
+        padding: 45px 0 125px;
+      } 
+
+      .logo-nav {
+        padding: 0px 35px;
+      }
+
+      .logo {
+        width: 160px;
+
+      }
+
+      .site-navigation {
+        display: none;
+      }
+  
+      .site-navigation-item {
+        display: none;
+      }
+
+      .headline {
+        min-width: 610px;
+        font-size: 40px;
+        line-height: 1.4;
+ 
+      }
+  
+      .cards-trends-container {
+        flex-wrap: wrap;
+      }
+  
+      .section-trends-wrapper {
+        margin-top: 45px;
+      }
+  
+      .trends-title {
+        font-size: 18px;
+        margin-bottom: 20px;
+      }
+  
+      .trends-title::after {
+        margin-top: 6px;
+      }
+  
+      .trend-card {
+        width: 49.8%;
+        margin-bottom: 0.4%;
+      }
+  
+      .trend-card:not(:last-child) {
+        margin-bottom: 0.5%;
+      }
+  
+      .content-card-trend {
+        margin-top: 0px;
+        margin-bottom: 9px;
+      }
+  
+      .card-trend-title {
+        font-size: 17px;
+        line-height: 1.3;
+      }
+  
+      .main-aside {
+        margin-top: 50px;
+      }
+  
+      .posts-item {
+        display: block;
+        width: 100%;
+      }
+  
+      .posts-item::after {
+        content: "";
+        display: block;
+        width: 100%;
+        height: 3px;
+        background-color: #eeeeee;
     
+        margin-top: 17px;
+      }
+  
+      .posts-item-2 {
+        display: block;
+        width: 100%;
+        margin-top: 17px;
+      }
+  
+      .posts-item-2::after {
+        content: "";
+        display: block;
+        width: 100%;
+        height: 3px;
+        background-color: #eeeeee;
+    
+        margin-top: 17px;
+      }
+  
+      .posts-item-3 {
+        display: block;
+        width: 100%;
+        margin-top: 34px;
+      }
+  
+      .posts-item-3::after {
+        content: "";
+        display: block;
+        width: 100%;
+        height: 3px;
+        background-color: #eeeeee;
+    
+        margin-top: 17px;
+      }
+  
+      .posts-item-4 {
+        display: block;
+        width: 100%;
+        margin-top: 34px;
+      }
+  
+      .posts-item-4::after {
+        content: "";
+        display: block;
+        width: 100%;
+        height: 3px;
+        background-color: #eeeeee;
+        margin-top: 17px;
+      }
+  
+      .posts-image {
+        width: 100%;
+      }
+  
+      .posts-content {
+        margin-top: 8px;
+      }
+  
+      .post-header {
+        font-size: 16px;
+        line-height: 1.3;
+        margin-bottom: 25px;
+      }
+  
+      .time-author {
+        margin-bottom: 25px;
+      }
+  
+      .post-description {
+        font-size: 14px;
+        line-height: 1.4;
+        margin-top: 3px;
+      }
+  
+  
+      .right-column {
+        margin-top: 45px;
+        display: block;
+        width: 100%;
+        margin-left: 12px;
+        margin-right: 12px;
+      }
+  
+      .side-header {
+        font-size: 16px;
+        margin-bottom: 25px;
+      }
+  
+      .side-header::after {
+        margin-top: 10px;
+      }
+  
+      .side-items {
+        padding-bottom: 60px;
+      }
+  
+      .side-search {
+        margin-bottom: 40px;
+      }
+  
+      .subscribe {
+        margin-bottom: 40px;
+      }
+  
+      .tags {
+        margin-bottom: 40px;
+      }
+  
+      .tags-header {
+        font-size: 16px;
+      }
+  
+      .tags-header::after {
+        left: 153px;
+      }
+  
+      .themes-content li {
+        padding: 12px 0 11px;
+      }
+  
+      .main-footer {
+        margin-top: 45px;
+        padding-bottom: 45px;
+      }
+  
+      .copyright {
+        margin-top: 50px;
+      }
+  
+      .handwork-cards {
+        width: 100%;
+        padding: 30px;
+      }
+
+      .handwork-card {
+        width: calc(50% - 13px);
+      }
+    
+      .handwork-card:not(:last-child) {
+        margin-bottom: 25px;
+      }
+
+      
 
 
 
-  }
+
+
+
+    }
+  
 
