--- a/css/style.css
+++ b/css/style.css
@@ -1077,7 +1077,7 @@
     @media (min-width: 641px) and (max-width: 1199px) and (orientation: portrait) {
 
       .header {
-        padding: 45px 0 125px;
+        padding: 83px 0 0 0;
       } 
 
       .logo-nav {
@@ -1111,6 +1111,10 @@
       .section-trends-wrapper {
         margin-top: 45px;
       }
+
+      .trends {
+        margin-top: 35px;
+      }
   
       .trends-title {
         font-size: 18px;
@@ -1124,6 +1128,7 @@
       .trend-card {
         width: 49.8%;
         margin-bottom: 0.4%;
+        padding: 0;
       }
   
       .trend-card:not(:last-child) {
@@ -1131,7 +1136,7 @@
       }
   
       .content-card-trend {
-        margin-top: 0px;
+        margin-top: 94px;
         margin-bottom: 9px;
       }
   
@@ -1141,7 +1146,7 @@
       }
   
       .main-aside {
-        margin-top: 50px;
+        margin-top: 0;
       }
   
       .posts-item {
@@ -1207,7 +1212,8 @@
       }
   
       .posts-image {
-        width: 100%;
+        width: 88%;
+        margin-left: 30px;
       }
   
       .posts-content {
@@ -1298,7 +1304,7 @@
         margin-bottom: 25px;
       }
 
-      
+
 
 
 
