--- a/css/style.css
+++ b/css/style.css
@@ -70,10 +70,10 @@
   }
   
   .logo {
-    max-width: 180px;
+    width: 180px;
   }
   
-  .menu_button {
+  .menu-button {
     display: none;
     width: 25px;
     height: 20px;
@@ -84,15 +84,15 @@
     cursor: pointer;
   }
   
-  .menu_button:after {
+  .menu-button:after {
     bottom: 0;
   }
   
-  .menu_button:before {
+  .menu-button:before {
     top: 0;
   }
   
-  .menu_button:before, .menu_button:after {
+  .menu-button:before, .menu-button:after {
     content: "";
     width: 100%;
     height: 20%;
@@ -101,7 +101,7 @@
     left: 0;
   }
   
-  .menu_button_lable {
+  .menu-button-lable {
     width: 100%;
     height: 20%;
     background-color: #fff;
@@ -187,7 +187,7 @@
     background-size: cover;
     position: relative;
     z-index: 0;
-    padding: 20px;
+    padding: 41px 20px 20px 20px;
     display: flex;
     align-items: flex-end;
   }
@@ -262,7 +262,7 @@
 
   .main-aside {
     display: flex;
-    margin-top: auto;
+    margin-top: 21px;
     margin-right: auto;
     margin-bottom: 5px;
     margin-left: auto;
@@ -675,6 +675,7 @@
     margin: -6px auto 0;
     max-width: 1200px;
     padding: 0 15px;
+    margin-bottom: 69px;
   }
   
   .handwork-title {
@@ -901,7 +902,7 @@
       display: none;
     }
 
-    .menu_button {
+    .menu-button {
       display: block;
       margin-top: -240px;
   }
@@ -1138,7 +1139,7 @@
         display: none;
       }
 
-      .menu_button {
+      .menu-button {
         display: block;
     }
 
